# stm32f103c8t6

./: .gitignore  Cargo.toml  README.md  build.sh
src/: main.rs
