[package]
name = "stm32f103c8t6"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
cortex-m-semihosting = "*"
panic-halt = "*"
nb = "1.0.0"
embedded-hal = "0.2.3"

[dependencies.stm32f1xx-hal]
version = "0.7.0"
features = ["stm32f100", "rt"]

[profile.release]
codegen-units = 1 # Лучшая оптимизация
debug = true # Нормальные символы, не увеличивающие размер на Flash памяти
lto = true # Лучшая оптимизация

[[bin]]
name = "stm32f103c8t6"
test = false
bench = false